# TQS-Labs

./: README.md
lab1/: README.md
lab1/lab1_1/tqsstack/: pom.xml
lab1/lab1_2/tqs_labs_euromillion_unit/: pom.xml
lab2/: README.md
lab2/lab2_1/stocksPortfolio/: pom.xml
lab2/lab2_2/conversionMethodBehavior/: pom.xml
lab2/lab2_3/BasicHttpClient/: pom.xml
lab3/: README.md
lab3/lab3_1/: README.md
lab3/lab3_2/carService/: pom.xml
lab4/lab4_1/helloWorld/: pom.xml
lab4/lab4_2/interactiveTestRecording/: pom.xml
lab4/lab4_4/pageObjectPattern/: pom.xml
lab4/lab4_5/browserVariations/: pom.xml
lab5/lab5_1/calculator/: pom.xml
lab5/lab5_2/passingDataToTests/: pom.xml
lab5/lab5_3/webAutomation/: pom.xml
lab6/lab6_1/testContainers/: pom.xml
lab6/lab6_3/RESTAssured/: pom.xml
lab6/lab6_4/carService/: pom.xml
lab7/: README.md
lab8/: README.md
lab8/lab8_1/tqs_labs_euromillion_unit/: pom.xml
lab8/lab8_2/carService/: compose.yaml  pom.xml
lab8/lab8_3/ies-24-25-group-project-304-master/projHomeMaid/data_generator/: Dockerfile  data_generator.py  pyproject.toml
lab8/lab8_3/ies-24-25-group-project-304-master/projHomeMaid/data_generator/kafka_data/: meta.properties  recovery-point-offset-checkpoint  replication-offset-checkpoint
lab8/lab8_3/ies-24-25-group-project-304-master/projHomeMaid/data_generator/kafka_data/device_automations-0/: leader-epoch-checkpoint  partition.metadata
lab8/lab8_3/ies-24-25-group-project-304-master/projHomeMaid/data_generator/kafka_data/sensor_data-0/: leader-epoch-checkpoint  partition.metadata
(+223 files in other folders)
