[tool.poetry]
name = "data-generator"
version = "0.1.0"
description = ""
authors = ["hujuc <hugocastro@ua.pt>"]
readme = "README.md"
packages = [{include = "data_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
kafka-python = "^2.0.2"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
